fix text overlap on mobile

--- a/assets/css/style_menu.css
+++ b/assets/css/style_menu.css
@@ -88,3 +88,12 @@
   letter-spacing: 0em;
   font-weight: 700;
 }
+
+.clearfix:after {
+ visibility: hidden;
+ display: block;
+ font-size: 0;
+ content: " ";
+ clear: both;
+ height: 0;
+ }
